# snake_bot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
snake_bot/: main.py  utils.py
snake_bot/database/: db.py  models.py  start_db.py
